Part1 of Anuglar2 Tutorial including example with bidirectional binding

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Angular 2 test</title>
+    
 	<script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
 	<script src="node_modules/systemjs/dist/system.src.js"></script>
 	<script src="node_modules/rxjs/bundles/Rx.js"></script>
@@ -19,6 +20,7 @@
 	</script>
 </head>
 <body>
+    <!-- Tag configured as a selector -->
 	<my-app></my-app>
 </body>
 </html>
