Added RESTful service functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <!-- Need this for routing -->
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
+    <script src="https://code.angularjs.org/2.0.0-beta.0/http.dev.js"></script>
     <!-- 
         This script tag must be below the system.src.js script tag otherwise routing does not work. It gives an EXCEPTION: No provider for Router! 
         Tag for es6-shim.js must also be after system.src.js script tag
